@@ -1,3 +1,7 @@
+2007-01-11  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>
+
+	* itpp/comm/ldpc.cpp, tests/ldpc_test.ref: minor enhancement
+
 2007-01-09  Conrad Sanderson  <conrad_s@users.sourceforge.net>
 
 	* itpp/base/itassert.cpp: changed "Assertation" to "Assertion"
